# miminet

./: .claudeignore  .gitignore  CLAUDE.md  Makefile  pyproject.toml  start_all_containers.sh
.github/workflows/: auth_test.yml  back_test.yml  back_test_with_coverage.yml  full_test.yml  linter.yml  update_uv_lock.yml
ansible/: miminet_back_1.conf
back/: Dockerfile  ENTRYPOINT.sh  docker-compose.yml
back/src/: celery_app.py  celery_app_back.py  emulator.py  jobs.py  network_schema.py  network_topology.py  pkt_parser.py  tasks.py
back/src/net_utils/: vxlan.py
back/tests/: test_duplication.py  test_miminet_back.py  test_network_schema.py  test_pkt_parser.py
back/vagrant/: start_worker.sh
docs/: 00-ARCHITECTURE.md  01-GETTING_STARTED.md  02-DEVELOPMENT.md  03-TESTING.md  04-DATABASE_AND_API.md  05-OPERATIONS.md
front/: Dockerfile  docker-compose-prod.yml  docker-compose.yml  requirements.txt  run_app.sh
front/src/: app.py  celery_app_front.py  configurators.py  miminet_admin.py  miminet_auth.py  miminet_host.py  miminet_model.py  miminet_network.py  miminet_simulation.py  pcap_parser.py  tasks.py
front/src/auth_tests/: tg_test.py  yandex_test.py
front/src/quiz/controller/: quiz_session_controller.py  section_controller.py  test_controller.py
front/src/quiz/entity/: entity.py
front/src/quiz/facade/: json_schema_validation.py  question_facade.py  quiz_session_facade.py
front/src/quiz/service/: check_host_service.py  check_practice_service.py  network_upload_service.py  section_service.py  session_question_service.py  test_service.py
front/src/quiz/util/: dto.py
front/tests/: conftest.py  test_config_db.py  test_device_configure_names.py  test_dhcp.py  test_duplication.py  test_fields_filter.py  test_job_edit.py  test_job_limit.py  test_nat.py  test_network_menu.py  test_packet_filters.py  test_ping_and_copy.py  test_router_cycle.py  test_tcp_udp.py  test_user_options_input.py
front/tests/utils/: checkers.py  locators.py  networks.py
