[project]
name = "miminet"
version = "1.0.0"
description = "Web emulator for computer networks based on Mininet"
authors = [
    {name = "Miminet Team", email = "no-reply@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["network", "emulation", "mininet", "education", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Education",
]

# Core dependencies (minimal, used by both frontend and backend)
dependencies = [
    "sqlalchemy==2.0.43",
    "celery==5.5.3",
    "kombu==5.5.4",
    "requests==2.32.5",
    "jsonschema==4.25.1",
]

[project.urls]
Repository = "https://github.com/mimi-net/miminet"
Homepage = "https://miminet.ru"

[dependency-groups]
# Frontend dependencies
frontend = [
    # Web framework
    "flask",
    "flask-login",
    "flask-migrate",
    "flask-sqlalchemy",
    "flask-admin",
    # Templating and validation
    "jinja2",
    "werkzeug",
    "wtforms",
    # Database
    "psycopg2-binary",
    # Data processing
    "dotenv",
    "pillow",
    "beautifulsoup4",
    # Authentication
    "google-auth",
    "google-auth-oauthlib",

]

# Backend dependencies
backend = [
    # Network emulation (Git dependencies - Linux only)
    "ipmininet @ git+https://github.com/mimi-net/ipmininet.git@1.2.4; sys_platform=='linux'",
    # Packet parsing and serialization
    "dpkt",
    "marshmallow",
    "marshmallow-dataclass",
    # support backend tests and code using netaddr
    "netaddr",
    "psutil>=5.9.5",
    "typeguard",
]

# Frontend Testing & Development
dev-frontend = [
    # Testing framework
    "pytest",
    "pytest-html",
    "pytest-timeout",
    "pytest-mock",
    # Browser automation
    "selenium",
    "webdriver-manager",
    # Code quality (frontend-focused)
    "black",
    "flake8",
    "isort",
    "mypy",
]

# Backend Testing & Development
dev-backend = [
    # Testing with coverage
    "pytest",
    "pytest-cov",
    "pytest-timeout",
    "pytest-mock",
    "pytest-xdist",
    # Code quality
    "black",
    "flake8",
    "isort",
    "pylint",
    "mypy",
]

# Common Development Tools
dev = [
    "requests>=2.32.5",
    # Documentation (optional, used occasionally)
    "sphinx",
    "sphinx-rtd-theme",
]

# Production dependencies
prod = [
    "uwsgi",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["miminet"]

# --- Tool Configurations ---

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["miminet"]
known_third_party = ["flask", "celery", "mininet"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_untyped_calls = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["mininet.*", "ipmininet.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["front/tests", "back/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "selenium: Browser automation tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
    "flaky: Tests that may fail intermittently",
    "network: Network topology tests",
    "dhcp: DHCP protocol tests",
    "vlan: VLAN configuration tests",
    "arp: ARP protocol tests",
    "nat: NAT translation tests",
    "routing: Routing tests",
]
timeout = 300
log_cli = false
log_cli_level = "INFO"

[tool.coverage.run]
source = ["front/src", "back/src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
skip_covered = false

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100
